almost finished with new id schema, definitions mostly working